force-app/main/default/objects/Account/fields/Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address__c</fullName>
    <label>Corporate Address</label>
    <type>TextArea</type>
</CustomField>