force-app/main/default/objects/Account/fields/D_B_Number__c.field-meta.xml
<CustomField>
    <fullName>D_B_Number__c</fullName>
    <label>D &amp; B Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>