force-app/main/default/objects/Account/fields/Diversity_Classifications__c.field-meta.xml
<CustomField>
    <fullName>Diversity_Classifications__c</fullName>
    <label>Diversity Classifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled-person-owned (US)</fullName>
            </value>
            <value>
                <fullName>Disabled-veteran-owned (US)</fullName>
            </value>
            <value>
                <fullName>LGBTQ+-owned (US)</fullName>
            </value>
            <value>
                <fullName>Minority-owned (US)</fullName>
            </value>
            <value>
                <fullName>Native American-owned</fullName>
            </value>
            <value>
                <fullName>Alaska Native-owned (US)</fullName>
            </value>
            <value>
                <fullName>Small Business (SBA) (US)</fullName>
            </value>
            <value>
                <fullName>Union Personnel (US)</fullName>
            </value>
            <value>
                <fullName>Veteran-owned (US)</fullName>
            </value>
            <value>
                <fullName>Woman-owned (US)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>