force-app/main/default/objects/Account/fields/Number_of_Employess__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employess__c</fullName>
    <label>Number of Employess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>