force-app/main/default/objects/Account/fields/Phone_Number1__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number1__c</fullName>
    <label>Phone Number1</label>
    <type>Phone</type>
</CustomField>