force-app/main/default/objects/Account/fields/Phone_Number2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number2__c</fullName>
    <label>Phone Number2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>