force-app/main/default/objects/Account/fields/Supplier_Settings__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Settings__c</fullName>
    <label>Supplier Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>