force-app/main/default/objects/Account/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Supplier_Settings__c</columns>
    <columns>Number_of_Employess__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>